# HIPRT

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  license.txt  premake5.lua  version.txt
.github/workflows/: format.yaml  format_and_update_hash.yaml
cmake/: FindHIP.cmake  bake_kernels.cmake  compile_kernels.cmake  convert_binary_to_array.cmake  embed_kernels.cmake  install_rules.cmake
contrib/Orochi/Orochi/: Orochi.cpp
contrib/Orochi/ParallelPrimitives/: RadixSort.cpp
contrib/cpp20/: source_location.h
contrib/easy-encryption/: cl.cpp  premake5.lua  vigenere.h
contrib/embree/include/embree4/: rtcore_config.h
contrib/embree/linux/: libtbb.so.12  libtbb.so.12.10
contrib/embree/win/: tbb12.lib
contrib/stbi/: stb_image.h  stbi_image_write.h
doc/: release.md
hiprt/: hiprt.h.in  hiprt_common.h  hiprt_device.h  hiprt_libpath.h  hiprt_math.h  hiprt_types.h  hiprt_vec.h  hiprtew.h.in
hiprt/impl/: Aabb.h  AabbList.cpp  AabbList.h  ApiNodeList.h  BatchBuilder.cpp  BatchBuilder.h  BatchBuilderKernels.h  BvhBuilderKernels.h  BvhBuilderUtil.h  BvhCommon.h  BvhConfig.h  BvhImporter.cpp  BvhImporter.h  BvhImporterKernels.h  BvhNode.cpp  BvhNode.h  Compiler.cpp  Compiler.h  Context.cpp  Context.h  Error.cpp  Error.h  Geometry.h  Header.cpp  Header.h  Instance.h  InstanceList.cpp  InstanceList.h  Kernel.cpp  Kernel.h  LbvhBuilder.cpp  LbvhBuilder.h  LbvhBuilderKernels.h  Logger.cpp  Logger.h  Math.h  MemoryArena.h  MortonCode.h  NodeList.h  Obb.h  (+23 more)
scripts/: concatVersion.py  unittest.bat  unittest.sh  unittest_perf.bat  unittest_perf.sh  unittest_precomp.bat
scripts/bitcodes/: common_tools.py  compile.py  precompile_bitcode.py
test/: CornellBox.h  hiprtTest.cpp  hiprtTest.h  hiprtewTest.cpp  hiprtewTest.h  main.cpp  shared.h
test/bitcodes/: custom_func_table.cpp  unit_test.cpp
test/common/: allocator.h  bvhbuilder.h  tiny_obj_loader.h
test/common/meshes/cornellbox/: cornellBox.mtl
test/kernels/: AoRayKernel.h  HiprtTestKernel.h  PrimaryRayKernel.h  ShadowRayKernel.h
tools/: bakeKernel.bat  bakeKernel.sh  bake_kernels.py  functions.lua  genArgs.py  stringify.py
tools/premake5/linux64/: premake5
